tab layout break with form problem solved

--- a/scss/_profilepage.scss
+++ b/scss/_profilepage.scss
@@ -190,6 +190,7 @@ img {
   z-index: 2;
   padding: 1.525rem;
   border-radius: 0.525rem;
+  display: none;
 
   translate: 100% 0;
   transition: 600ms;
@@ -265,6 +266,7 @@ img {
   scale: 0.3;
   border-radius: 0.5rem;
   z-index: 2;
+  display: none;
 
   input,
   textarea,
